client/css/app.css
.splash {
    text-align: center;
    margin: 10% 0 0 0;
}

body {
    padding-bottom: 50px;
}

.splash .message {
    font-size: 5em;
    line-height: 1.5em;
    -webkit-text-shadow: rgba(0, 0, 0, 0.5) 0px 0px 15px;
    text-shadow: rgba(0, 0, 0, 0.5) 0px 0px 15px;
    text-transform: uppercase;
}

.splash .icon-spinner {
    text-align: center;
    display: inline-block;
    font-size: 5em;
    margin-top: 50px;
}

.inline { display: inline;}

.page-host {
    position: relative;
    top: 50px;
    padding: 50px 20px 0 20px;
}

.navbar-fixed-top .navbar-inner {
    padding-left: 1em;
    padding-right: 1em;
}

.navbar-fixed-top .icon-home {
    font-size: 18px
}

.loader {
    margin: 6px 8px 4px 8px;
    visibility: hidden;
}

.loader.active {
    visibility: visible;
}

@media (max-width: 979px) {
    .page-host {
        top: 0;
    }

    .navbar-fixed-top {
        margin-bottom: 0;
    }
}

.dialog-base {
    padding: 19px 29px;
    background-color: #fff;
    border: 1px solid #e5e5e5;
   -webkit-border-radius: 5px;
       -moz-border-radius: 5px;
            border-radius: 5px;
    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
       -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
            box-shadow: 0 1px 2px rgba(0,0,0,.05);
}

/* Home */

.navbar-collapse { 
    min-height: 3.5em;
    overflow:hidden;
}

.btn-home { 
    margin-right: 10px;
    margin-bottom: 10px;
}

/* Project */

.project-header { 
    margin-top: 15px;
    margin-bottom: 10px;
}

.nav-project {
    background-color: #1c1e22;
}
.nav-project>li>a { display: inline-block; }
.nav-project>li>a.active { background-color: #3e444c; }

